<resources>
    <string name="app_name">Night Shift Mode</string>
    <string name="hello">hello</string>
    <string name="color">Color</string>
    <string name="Text2">Auto Mode</string>
    <string name="on_off">On/Off</string>
    <string name="on_off_notification">Night Shift Mode On</string>
    <string name="hen_gio">Set time</string>
    <string name="nhap_so_phut">Time</string>
    <string name="tu">Start :</string>
    <string name="den">End :</string>
    <string name="fonts">SanFranciscoDisplay-Semibold</string>
    <string name="dieu_chinh_do_mo">Adjust Transparency</string>
        <string name="thanks">Do you love this app?</string>
    <string name="rate">Rate My App</string>
    <string name="sure">Sure</string>
    <string name="later">Later</string>
    <string name="PleaseTurnOn">Please enable the app</string>
    <string name="Sorry">Sorry!!! Your phone can not use this function</string>
    <string name="Turnoff">Sorry!!! Your phone can not use this function</string>
    <string name="TimeStart">Please select a start time</string>
    <string name="TimeEnd">Please select a end time</string>
    <string name="erroData">Wrong data</string>
    <string name="enterTime">Please enter the time</string>
    <string name="data">Please input data</string>
    <string name="pleaseTurnOn">Please turn on the function</string>
</resources>
