<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="@dimen/_300sdp"
        android:layout_height="@dimen/_200sdp"
        android:layout_gravity="center">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="@dimen/_300sdp"
            android:layout_height="@dimen/_40sdp">

            <TextView
                android:background="@drawable/custom_button_rate"
                android:layout_width="@dimen/_300sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/rate"
                android:textColor="#fff"
                android:textSize="@dimen/_19sdp"
                android:textStyle="bold" />

        </LinearLayout>
        <LinearLayout
            android:background="#fff"
            android:layout_gravity="center"
            android:layout_width="@dimen/_300sdp"
            android:layout_height="@dimen/_40sdp">

            <TextView
                android:layout_width="@dimen/_300sdp"
                android:layout_height="@dimen/_40sdp"
                android:gravity="center"
                android:text="@string/thanks"
                android:textColor="#000"
                android:textSize="@dimen/_17sdp" />


        </LinearLayout>
        <LinearLayout
            android:background="#fff"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:layout_width="@dimen/_300sdp"
            android:layout_height="@dimen/_70sdp">

            <ImageButton
                android:id="@+id/start1"
                android:layout_marginRight="@dimen/_5sdp"
                android:background="@drawable/star"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp" />
            <ImageButton
                android:id="@+id/start2"
                android:layout_marginRight="@dimen/_5sdp"
                android:background="@drawable/star"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"/>
            <ImageButton
                android:id="@+id/start3"
                android:layout_marginRight="@dimen/_5sdp"
                android:background="@drawable/star"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp" />
            <ImageButton
                android:id="@+id/start4"
                android:layout_marginRight="@dimen/_5sdp"
                android:background="@drawable/star"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"/>
            <ImageButton
                android:id="@+id/start5"
                android:background="@drawable/star"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp" />

        </LinearLayout>
        <LinearLayout
            android:background="@drawable/custom_button_rate_bottom"
            android:orientation="horizontal"
            android:layout_width="@dimen/_300sdp"
            android:gravity="center"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_height="@dimen/_40sdp">

            <Button
                android:background="@drawable/button_dialog_finish"
                android:id="@+id/btn_sure"
                android:textColor="@color/colorPrimary"
                android:layout_marginRight="@dimen/_30sdp"
                android:text="@string/sure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:background="@drawable/button_dialog_finish"
                android:id="@+id/btn_later"
                android:textColor="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/later" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>