<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <!--<android.support.v7.widget.Toolbar-->
        <!--android:id="@+id/toolbar"-->
        <!--app:titleTextColor="#fff"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:minHeight="?attr/actionBarSize"-->
        <!--android:background="@color/colorPrimary"/>-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_7sdp"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:src="@drawable/ic_power" />

                <TextView
                    android:id="@+id/on_off"
                    android:layout_width="@dimen/_220sdp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center|left"
                    android:text="@string/on_off"
                    android:textColor="#000"
                    android:textSize="@dimen/_15sdp" />

                <ToggleButton
                    android:id="@+id/toggleButton"
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_gravity="center"
                    android:background="@drawable/custom_togen"
                    android:textOff=""
                    android:textOn="" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#a79e90">

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:orientation="horizontal"
                android:weightSum="5">

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:src="@drawable/ic_auto" />

                <TextView
                    android:id="@+id/auto"
                    android:layout_width="@dimen/_180sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center"
                    android:layout_weight="4"
                    android:gravity="center|left"
                    android:text="@string/Text2"
                    android:textColor="#000"
                    android:textSize="@dimen/_15sdp"/>

                <ToggleButton
                    android:id="@+id/toggleButton_auto_night"
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_gravity="center"
                    android:background="@drawable/custom_togen"
                    android:textOff=""
                    android:textOn="" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#a79e90">

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:src="@drawable/ic_color" />

                    <TextView
                        android:id="@+id/color"
                        android:layout_width="@dimen/_206sdp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="4"
                        android:gravity="center|left"
                        android:text="@string/color"
                        android:textColor="#000"
                        android:textSize="@dimen/_15sdp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/_15sdp">

                    <Button
                        android:id="@+id/btn_green"
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:background="@drawable/ic_green" />

                    <Button
                        android:id="@+id/btn_yellow"
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="@dimen/_15sdp"
                        android:background="@drawable/ic_yellow" />

                    <Button
                        android:id="@+id/btn_red"
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="@dimen/_15sdp"
                        android:background="@drawable/ic_red" />

                    <Button
                        android:id="@+id/btn_pink"
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="@dimen/_15sdp"
                        android:background="@drawable/ic_pink" />

                    <Button
                        android:id="@+id/btn_blue"
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginLeft="@dimen/_15sdp"
                        android:background="@drawable/ic_blue" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#a79e90">

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:orientation="vertical"
                    android:weightSum="3">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_50sdp">
                        <ImageView
                            android:layout_width="@dimen/_20sdp"
                            android:layout_height="@dimen/_20sdp"
                            android:layout_gravity="center"
                            android:layout_marginLeft="@dimen/_10sdp"
                            android:layout_marginRight="@dimen/_10sdp"
                            android:src="@drawable/ic_ajust" />

                        <TextView
                            android:layout_gravity="center"
                            android:id="@+id/textView"
                            android:layout_width="@dimen/_220sdp"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:gravity="center|left"
                            android:text="@string/dieu_chinh_do_mo"
                            android:textColor="#000"
                            android:textSize="@dimen/_15sdp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/edt_on_off" />


                    </LinearLayout>


                    <SeekBar
                        android:id="@+id/seekBar"
                        android:layout_gravity="center"
                        android:layout_width="@dimen/_270sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:max="200"
                        android:theme="@style/MySeekBarTheme" />
                    <TextView
                        android:textSize="@dimen/_15sdp"
                        android:gravity="center"
                        android:textColor="#000"
                        android:id="@+id/phanTram"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp" />
                </LinearLayout>


            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/Imv_time_2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignEnd="@+id/Imv_time"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/Imv_time"
            android:layout_gravity="right"
            android:layout_marginBottom="154dp"
            android:layout_marginRight="5dp"
            android:elevation="5dp"
            android:src="@drawable/ic_date" />

        <ImageView
            android:id="@+id/Imv_time_1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignEnd="@+id/Imv_time"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/Imv_time"
            android:layout_gravity="right"
            android:layout_marginBottom="94dp"
            android:layout_marginRight="5dp"
            android:elevation="4dp"
            android:background="@drawable/set_time" />

        <ImageView
            android:visibility="visible"
            android:id="@+id/Imv_time"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="right"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:elevation="4dp"
            android:src="@drawable/button_floatting" />

    </RelativeLayout>


</LinearLayout>